remove guava usage